Bug 299260 - khtml rendering of combobox with padding is not fully correct
Summary: khtml rendering of combobox with padding is not fully correct
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml forms (other bugs)
Version First Reported In: 4.8.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-02 20:33 UTC by Andrea Iacovitti
Modified: 2012-05-07 17:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments
testcase (2.39 KB, text/html)
2012-05-02 20:33 UTC, Andrea Iacovitti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Iacovitti 2012-05-02 20:33:31 UTC
Created attachment 70813 [details]
testcase

Actually, in quirks mode, rendering of combobox takes into account css padding.
While the size of combobox is correctly set according to specified padding , the label is not aligned to the baseline.

Attached a testcase.
Comment 1 Andrea Iacovitti 2012-05-07 17:41:59 UTC
Git commit fcc12b02f685ed860f6187571b6e14fd3b61285a by Andrea Iacovitti.
Committed on 07/05/2012 at 19:40.
Pushed by aiacovitti into branch 'KDE/4.8'.

Adjust combobox label position according to padding values.
FIXED-IN: 4.8.4

M  +14   -3    khtml/rendering/render_form.cpp

http://commits.kde.org/kdelibs/fcc12b02f685ed860f6187571b6e14fd3b61285a