Adjust combobox label position according to padding values.

BUG: 299260
FIXED-IN: 4.8.4